--- a/index.html
+++ b/index.html
@@ -153,33 +153,33 @@
 	</script>
 </head>
 <body>
-	<h1>Crickdle - Guess the Top Players</h1>
-	<h2>Test Match: Team 1 vs Team 2</h2>
-	<p>Date: Day Month Year</p>
-	<p>Score: Team 1 Score - Team 2 Score</p>
-	<p>Match Number: Test Match x of y</p>
+	<h1>Crickdle - Daily Online Cricket Game</h1>
+	<h2>Test Match: India vs Australia</h2>
+	<p>Date: 9-11 February 2023</p>
+	<p>Score: Australia 177 & 91; India 400</p>
+	<p>Match Number: Test Match 1 of 4</p>
 	<div>
 		<h3>Top Run Scorers</h3>
-		<p>Player 1 - <img src="country-flag.png" alt="Country Flag"> Top Score: X</p>
-		<p>Player 2 - <img src="country-flag.png" alt="Country Flag"> Top Score: X</p>
+		<p>Player 1 - <img src="country-flag.png" alt="Country Flag"> Top Score: 120</p>
+		<p>Player 2 - <img src="country-flag.png" alt="Country Flag"> Top Score: 84</p>
 		<label>Guess the top two run scorers:</label><br>
 		<input type="text" id="run-scorer-1" placeholder="Enter player name"><br>
 		<input type="text" id="run-scorer-2" placeholder="Enter player name"><br>
 	</div>
 	<div>
 		<h3>Top Wicket Takers</h3>
-		<p>Player 1 - <img src="country-flag.png" alt="Country Flag"> Best Bowling Figures: X/Y</p>
-		<p>Player 2 - <img src="country-flag.png" alt="Country Flag"> Best Bowling Figures: X/Y</p>
+		<p>Player 1 - <img src="country-flag.png" alt="Country Flag"> Best Bowling Figures: 7/124</p>
+		<p>Player 2 - <img src="country-flag.png" alt="Country Flag"> Best Bowling Figures: 5/37</p>
 		<label>Guess the top two wicket takers:</label><br>
 		<input type="text" id="wicket-taker-1" placeholder="Enter player name"><br>
 		<input type="text" id="wicket-taker-2" placeholder="Enter player name"><br>
 	</div>
 	<button type="button" onclick="checkAnswers()">Submit</button>
 	<div>
-		<p id="run-scorer-1-answer"></p>
-		<p id="run-scorer-2-answer"></p>
-		<p id="wicket-taker-1-answer"></p>
-		<p id="wicket-taker-2-answer"></p>
+		<p id="Rohit Sharma"></p>
+		<p id="Axar Patel"></p>
+		<p id="Todd Murphy"></p>
+		<p id="Ravindra Jadeja"></p>
 	</div>
 	<div>
 		<h3>How to Play</h3>
