--- a/index.html
+++ b/index.html
@@ -160,16 +160,16 @@
 	<p>Match Number: Test Match 1 of 4</p>
 	<div>
 		<h3>Top Run Scorers</h3>
-		<p>Player 1 - <img src="country-flag.png" alt="Country Flag"> Top Score: 120</p>
-		<p>Player 2 - <img src="country-flag.png" alt="Country Flag"> Top Score: 84</p>
+		<p>Player 1 - <img src="india-flag.png" alt="Country Flag"> Top Score: 120</p>
+		<p>Player 2 - <img src="india-flag.png" alt="Country Flag"> Top Score: 84</p>
 		<label>Guess the top two run scorers:</label><br>
 		<input type="text" id="run-scorer-1" placeholder="Enter player name"><br>
 		<input type="text" id="run-scorer-2" placeholder="Enter player name"><br>
 	</div>
 	<div>
 		<h3>Top Wicket Takers</h3>
-		<p>Player 1 - <img src="country-flag.png" alt="Country Flag"> Best Bowling Figures: 7/124</p>
-		<p>Player 2 - <img src="country-flag.png" alt="Country Flag"> Best Bowling Figures: 5/37</p>
+		<p>Player 1 - <img src="australia-flag.png" alt="Country Flag"> Best Bowling Figures: 7/124</p>
+		<p>Player 2 - <img src="india-flag.png" alt="Country Flag"> Best Bowling Figures: 5/37</p>
 		<label>Guess the top two wicket takers:</label><br>
 		<input type="text" id="wicket-taker-1" placeholder="Enter player name"><br>
 		<input type="text" id="wicket-taker-2" placeholder="Enter player name"><br>
