--- a/index.html
+++ b/index.html
@@ -154,10 +154,10 @@
 </head>
 <body>
 	<h1>Crickdle - Daily Online Cricket Game</h1>
-	<h2>Test Match: India vs Australia</h2>
-	<p>Date: 9-11 February 2023</p>
-	<p>Score: Australia 177 & 91; India 400</p>
-	<p>Match Number: Test Match 1 of 4</p>
+	<h2>India vs Australia</h2>
+	<p>9-11 February 2023</p>
+	<p>Australia 177 & 91; India 400</p>
+	<p>Test 1 of 4</p>
 	<div>
 		<h3>Top Run Scorers</h3>
 		<p>Player 1 &#127470; - Top Score: 120</p>
