--- a/index.html
+++ b/index.html
@@ -209,23 +209,22 @@
 	</script>
 </head>
 <body>
-	<h1>Crickdle - Guess the top run scorer and wicket taker!</h1>
+	<h1>Crickdle - Daily cricket guessing game!</h1>
 	<div>
-		<h2>Match Information:</h2>
-		<p>Teams: <span id="team1">Team 1</span> vs <span id="team2">Team 2</span></p>
-		<p>Date: <span id="date">DD/MM/YYYY</span></p>
-		<p>Score: <span id="score">Score</span></p>
-		<p>Test match: <span id="match_number">X of X</span></p>
+		<h2><span id="team1">Team 1</span> vs <span id="team2">Team 2</span></h2>
+		<p><span id="date">DD/MM/YYYY</span></p>
+		<p><span id="score">Score</span></p>
+		<p><span id="match_number">X of X</span></p>
 	</div>
 	<div>
 		<h2>Guess the top run scorer:</h2>
-		<p>Nationality: <img src="path/to/team1_flag.png" alt="Team 1 Flag"><img src="path/to/team2_flag.png" alt="Team 2 Flag"></p>
+		<p>Nationality: <img src="path/to/team1_flag.png" alt="Team 1 Flag"></p>
 		<p>Top score: <span id="top_score">Top Score</span></p>
 		<input type="text" id="run_scorer_guess" name="run_scorer_guess">
 	</div>
 	<div>
 		<h2>Guess the top wicket taker:</h2>
-		<p>Nationality: <img src="path/to/team1_flag.png" alt="Team 1 Flag"><img src="path/to/team2_flag.png" alt="Team 2 Flag"></p>
+		<p>Nationality: <img src="path/to/team1_flag.png" alt="Team 1 Flag"></p>
 		<p>Best bowling figures: <span id="best_bowling">Best Bowling Figures</span></p>
 		<input type="text" id="wicket_taker_guess" name="wicket_taker_guess">
 	</div>
