--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
 	</script>
 </head>
 <body>
-	<h1>Crickdle - Daily cricket guessing game!</h1>
+	<h1>Crickdle</h1>
 	<div>
 		<h2><span id="team1">Team 1</span> vs <span id="team2">Team 2</span></h2>
 		<p><span id="date">DD/MM/YYYY</span></p>
@@ -218,14 +218,12 @@
 	</div>
 	<div>
 		<h2>Guess the top run scorer:</h2>
-		<p>Nationality: <img src="path/to/team1_flag.png" alt="Team 1 Flag"></p>
-		<p>Top score: <span id="top_score">Top Score</span></p>
+		<p>Nationality 100*</p>
 		<input type="text" id="run_scorer_guess" name="run_scorer_guess">
 	</div>
 	<div>
 		<h2>Guess the top wicket taker:</h2>
-		<p>Nationality: <img src="path/to/team1_flag.png" alt="Team 1 Flag"></p>
-		<p>Best bowling figures: <span id="best_bowling">Best Bowling Figures</span></p>
+		<p>Nationality 3/56</p>
 		<input type="text" id="wicket_taker_guess" name="wicket_taker_guess">
 	</div>
 	<div>
