--- a/index.html
+++ b/index.html
@@ -218,12 +218,12 @@
 	</div>
 	<div>
 		<h2>Guess the top run scorer:</h2>
-		<p>Nationality 100*</p>
+		<p>&#128512; XXX*</p>
 		<input type="text" id="run_scorer_guess" name="run_scorer_guess">
 	</div>
 	<div>
 		<h2>Guess the top wicket taker:</h2>
-		<p>Nationality 3/56</p>
+		<p>&#128512; X/XX</p>
 		<input type="text" id="wicket_taker_guess" name="wicket_taker_guess">
 	</div>
 	<div>
