--- a/index.html
+++ b/index.html
@@ -217,13 +217,11 @@
 		<p><span id="match_number">X of X</span></p>
 	</div>
 	<div>
-		<h2>Guess the top run scorer:</h2>
-		<p>&#128512; XXX*</p>
+		<h2>&#128512;Top run scorer - XXX*</h2>
 		<input type="text" id="run_scorer_guess" name="run_scorer_guess">
 	</div>
 	<div>
-		<h2>Guess the top wicket taker:</h2>
-		<p>&#128512; X/XX</p>
+		<h2>&#128512;Top wicket taker - X/XX</h2>
 		<input type="text" id="wicket_taker_guess" name="wicket_taker_guess">
 	</div>
 	<div>
