--- a/index.html
+++ b/index.html
@@ -32,11 +32,13 @@
 			font-size: 36px;
 			font-weight: bold;
 			margin-bottom: 10px;
+			align-items: center;
 		}
 
 		.game-info {
 			margin-bottom: 10px;
 			font-size: 18px;
+			align-items: center;
 		}
 
 		.game-input {
@@ -50,6 +52,7 @@
 		.flag {
 			margin-right: 10px;
 			font-size: 24px;
+			align-items: center;
 		}
 
 		.submit-button {
@@ -64,12 +67,14 @@
 			margin-top: 20px;
 			cursor: pointer;
 			border-radius: 5px;
+			align-items: center;
 		}
 
 		.result-text {
 			margin-top: 10px;
 			font-size: 18px;
 			font-weight: bold;
+			align-items: center;
 		}
 
 		.answer-box {
@@ -81,6 +86,7 @@
 			height: 50px;
 			border: 2px solid black;
 			border-radius: 5px;
+			align-items: center;
 		}
 
 		.answer-correct {
@@ -104,6 +110,7 @@
 			height: 100%;
 			margin: 0;
 			padding: 0;
+			align-items: center;
 		}
 	</style>
 	<script>
