--- a/index.html
+++ b/index.html
@@ -32,13 +32,11 @@
 			font-size: 36px;
 			font-weight: bold;
 			margin-bottom: 10px;
-			align-items: center;
 		}
 
 		.game-info {
 			margin-bottom: 10px;
 			font-size: 18px;
-			align-items: center;
 		}
 
 		.game-input {
@@ -52,7 +50,6 @@
 		.flag {
 			margin-right: 10px;
 			font-size: 24px;
-			align-items: center;
 		}
 
 		.submit-button {
@@ -67,14 +64,12 @@
 			margin-top: 20px;
 			cursor: pointer;
 			border-radius: 5px;
-			align-items: center;
 		}
 
 		.result-text {
 			margin-top: 10px;
 			font-size: 18px;
-			font-weight: bold;
-			align-items: center;
+			font-weight: bold
 		}
 
 		.answer-box {
@@ -86,7 +81,6 @@
 			height: 50px;
 			border: 2px solid black;
 			border-radius: 5px;
-			align-items: center;
 		}
 
 		.answer-correct {
@@ -103,14 +97,12 @@
 			margin-top: 50px;
 			font-size: 18px;
 			font-style: italic;
-			text-align: center;
 		}
 
 		html, body {
 			height: 100%;
 			margin: 0;
 			padding: 0;
-			align-items: center;
 		}
 	</style>
 	<script>
