--- a/index.html
+++ b/index.html
@@ -1,238 +1,25 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<title>Crickdle - Daily Cricket Guessing Game!</title>
-	<style>
-		body {
-			display: flex;
-			flex-direction: column;
-			align-items: center;
-		}
-
-		.game-container {
-			display: flex;
-			flex-direction: column;
-			align-items: center;
-			border: 2px solid black;
-			padding: 10px;
-			margin-top: 50px;
-			border-radius: 10px;
-			box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-		}
-
-		.game-header {
-			display: flex;
-			flex-direction: column;
-			align-items: center;
-			margin-bottom: 20px;
-			font-size: 24px;
-		}
-
-		.game-title {
-			font-size: 36px;
-			font-weight: bold;
-			margin-bottom: 10px;
-		}
-
-		.game-info {
-			margin-bottom: 10px;
-			font-size: 18px;
-		}
-
-		.game-input {
-			display: flex;
-			flex-direction: row;
-			align-items: center;
-			margin-bottom: 10px;
-			font-size: 18px;
-		}
-
-		.flag {
-			margin-right: 10px;
-			font-size: 24px;
-		}
-
-		.submit-button {
-			background-color: #4CAF50;
-			border: none;
-			color: white;
-			padding: 10px 20px;
-			text-align: center;
-			text-decoration: none;
-			display: inline-block;
-			font-size: 18px;
-			margin-top: 20px;
-			cursor: pointer;
-			border-radius: 5px;
-		}
-
-		.result-text {
-			margin-top: 10px;
-			font-size: 18px;
-			font-weight: bold
-		}
-
-		.answer-box {
-			padding: 10px;
-			margin-bottom: 10px;
-			font-size: 18px;
-			text-align: center;
-			width: 150px;
-			height: 50px;
-			border: 2px solid black;
-			border-radius: 5px;
-		}
-
-		.answer-correct {
-			background-color: #4CAF50;
-			color: white;
-		}
-
-		.answer-incorrect {
-			background-color: #FF5252;
-			color: white;
-		}
-
-		.how-to-play {
-			margin-top: 50px;
-			font-size: 18px;
-			font-style: italic;
-		}
-
-		html, body {
-			height: 100%;
-			margin: 0;
-			padding: 0;
-		}
-	</style>
-</head>
-<body>
-	<h1>Crickdle</h1>
-	<div>
-		<h2>How to play:</h2>
-		<p>Guess the names of the top run scorer and top wicket taker in the given Test match based on the provided information. You have four guesses total. Good luck!</p>
-	</div>
-	<div>
-		<h2><span id="team1">Team 1</span> vs <span id="team2">Team 2</span></h2>
-		<p><span id="date">DD/MM/YYYY</span></p>
-		<p><span id="score">Score</span></p>
-		<p><span id="match_number">X of X</span></p>
-	</div>
-	<div>
-		<h2>&#128512;Top run scorer - XXX*</h2>
-		<input type="text" id="run_scorer_guess" name="run_scorer_guess">
-	</div>
-	<div>
-		<h2>&#128512;Top wicket taker - X/XX</h2>
-		<input type="text" id="wicket_taker_guess" name="wicket_taker_guess">
-	</div>
-	<div>
-		<button onclick="checkGuesses()">Submit</button>
-		<p id="result1"></p>
-		<p id="result2"></p>
-	</div>
-	<script>
-		window.onload = function() {
-		let team1, team2, date, score, series, topScorer, topScorerScore, topScorerFlag, topWicketTaker, topWicketTakerFigures, topWicketTakerFlag;
-
-		let guessCount = 0;
-		let runScorerGuess, wicketTakerGuess;
-
-		const teamNamesElement = document.getElementById('team-names');
-		const dateElement = document.getElementById('date');
-		const scoreElement = document.getElementById('score');
-		const seriesElement = document.getElementById('series');
-		const topScorerElement = document.getElementById('top-scorer');
-		const topScorerScoreElement = document.getElementById('top-scorer-score');
-		const topScorerFlagElement = document.getElementById('top-scorer-flag');
-		const topWicketTakerElement = document.getElementById('top-wicket-taker');
-		const topWicketTakerFiguresElement = document.getElementById('top-wicket-taker-figures');
-		const topWicketTakerFlagElement = document.getElementById('top-wicket-taker-flag');
-		const runScorerGuessElement = document.getElementById('run-scorer-guess');
-		const wicketTakerGuessElement = document.getElementById('wicket-taker-guess');
-		const guessButtonElement = document.getElementById('guess-button');
-		const messageElement = document.getElementById('message');
-
-		function updateGameData() {
-
-			team1 = 'Team 1';
-			team2 = 'Team 2';
-			date = '12 Feb 2023';
-			score = '100-200';
-			series = 'Test match 1 of 5';
-			topScorer = 'Player 1';
-			topScorerScore = 100;
-			topScorerFlag = '🇮🇳';
-			topWicketTaker = 'Player 2';
-			topWicketTakerFigures = '5/50';
-			topWicketTakerFlag = '🇦🇺';
-
-			teamNamesElement.textContent = `${team1} vs ${team2}`;
-			dateElement.textContent = date;
-			scoreElement.textContent = score;
-			seriesElement.textContent = series;
-			topScorerElement.textContent = topScorer;
-			topScorerScoreElement.textContent = topScorerScore;
-			topScorerFlagElement.textContent = topScorerFlag;
-			topWicketTakerElement.textContent = topWicketTaker;
-			topWicketTakerFiguresElement.textContent = topWicketTakerFigures;
-			topWicketTakerFlagElement.textContent = topWicketTakerFlag;
-			
-			guessCount = 0;
-			runScorerGuess = '';
-			wicketTakerGuess = '';
-			messageElement.textContent = '';
-		}
-
-		function checkGuesses() {
-			var runScorerGuess = document.getElementById("runScorerGuess").value;
-			var wicketTakerGuess = document.getElementById("wicketTakerGuess").value;
-			var runScorerAnswer = document.getElementById("runScorerAnswer").innerHTML;
-			var wicketTakerAnswer = document.getElementById("wicketTakerAnswer").innerHTML;
-
-			var runScorerCorrect = false;
-			var wicketTakerCorrect = false;
-
-			if (runScorerGuess.toLowerCase() === runScorerAnswer.toLowerCase()) {
-				document.getElementById("runScorerResult").style.color = "green";
-				document.getElementById("runScorerResult").innerHTML = "Correct!";
-				runScorerCorrect = true;
-			} else {
-				document.getElementById("runScorerResult").style.color = "red";
-				document.getElementById("runScorerResult").innerHTML = "Wrong";
-			}
-
-			if (wicketTakerGuess.toLowerCase() === wicketTakerAnswer.toLowerCase()) {
-				document.getElementById("wicketTakerResult").style.color = "green";
-				document.getElementById("wicketTakerResult").innerHTML = "Correct!";
-				wicketTakerCorrect = true;
-			} else {
-				document.getElementById("wicketTakerResult").style.color = "red";
-				document.getElementById("wicketTakerResult").innerHTML = "Wrong";
-			}
-
-			if (runScorerCorrect && wicketTakerCorrect) {
-				document.getElementById("guessesLeft").innerHTML = "You win!";
-				document.getElementById("runScorerGuess").disabled = true;
-				document.getElementById("wicketTakerGuess").disabled = true;
-				document.getElementById("submitGuesses").disabled = true;
-			} else {
-				guessesLeft--;
-				document.getElementById("guessesLeft").innerHTML = "Guesses left: " + guessesLeft;
-
-				if (guessesLeft === 0) {
-					document.getElementById("runScorerResult").style.color = "green";
-					document.getElementById("wicketTakerResult").style.color = "green";
-					document.getElementById("runScorerResult").innerHTML = "Answer: " + runScorerAnswer;
-					document.getElementById("wicketTakerResult").innerHTML = "Answer: " + wicketTakerAnswer;
-					document.getElementById("guessesLeft").innerHTML = "You lose!";
-					document.getElementById("runScorerGuess").disabled = true;
-					document.getElementById("wicketTakerGuess").disabled = true;
-					document.getElementById("submitGuesses").disabled = true;
-				}
-			}
-		}	
-	};
-	</script>
-</body>
+  <head>
+    <title>Crickdle</title>
+  </head>
+  <body>
+    <h1>Guess the top run scorer and top wicket taker in this Test cricket match:</h1>
+    <p>Nations: <span id="nations"></span></p>
+    <p>Date: <span id="date"></span></p>
+    <p>Score: <span id="score"></span></p>
+    <p>Game number: <span id="game-number"></span></p>
+    <h2>Top Run Scorer</h2>
+    <p>Top score: <span id="top-score"></span></p>
+    <input type="text" id="run-scorer-guess" placeholder="Enter name here">
+    <button id="submit-run-scorer-guess">Submit</button>
+    <div id="run-scorer-result"></div>
+    <h2>Top Wicket Taker</h2>
+    <p>Best bowling figures: <span id="best-bowling-figures"></span></p>
+    <input type="text" id="wicket-taker-guess" placeholder="Enter name here">
+    <button id="submit-wicket-taker-guess">Submit</button>
+    <div id="wicket-taker-result"></div>
+    <button id="reveal-answers">Reveal Answers</button>
+    <script src="crickdle.js"></script>
+  </body>
 </html>
